# open-hermes

./: .env.example  .gitignore  AGENTS.md  CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  VALUES.md  agents.ts  next.config.ts  package.json  synapse.ts  tailwind.config.ts  tsconfig.core.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_case.yml  bug_report.yml  failure_case.yml  feature_request.yml  idea.yml
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/avatar-morphing/: page.tsx
app/bias-shelter/: page.tsx
app/cognitive-fingerprint/: page.tsx
app/cognitive-map/: page.tsx
app/cognitive-will/: page.tsx
app/contribution-ledger/: page.tsx
app/crystal-store/: page.tsx
app/dual-coding-organ/: page.tsx
app/ecosystem/: page.tsx
app/garbage-station/: page.tsx
app/growth-center/: page.tsx
components/: FeatureGrid.tsx  HeroActionCard.tsx  HomeDashboard.tsx  JellyVisual.tsx  PetEvolutionPanel.tsx  Shell.tsx  UI.tsx
crates/jelly_core/: Cargo.toml
crates/jelly_core/src/: lib.rs
docs/: co_creation_protocol.md  glossary.md
lib/: cognitive.ts  crystals.ts  dualCodingOrgan.ts  gamification.ts  jellyPet.ts  mock.ts  modules.ts  morphing.ts  productSystemsMock.ts  types.ts  workshop.ts
rfcs/: 0001-memory-crystal.md  0002-push-flow-router.md  0003-context-compiler.md  README.md
tests/: cognitive.test.ts  crystals.test.ts  dualCodingOrgan.test.ts  ecosystem.test.ts  integrations.test.ts
(+256 files in other folders)
